--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://game/game.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://entities/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game/", "res://assets/level backgrounds/", "res://assets/level backgrounds/forest/", "res://assets/level backgrounds/beach_/", "res://assets/food items/", "res://assets/character sprites/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1458, 151, 1164, 695)
+floating_window_rect=Rect2i(1394, 59, 1292, 879)
 floating_window_screen=0
 
 [ShaderEditor]
