--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://entities/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game/", "res://assets/level backgrounds/", "res://assets/level backgrounds/forest/", "res://assets/level backgrounds/beach_/", "res://assets/food items/", "res://assets/character sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://ui/", "res://game/", "res://assets/", "res://assets/level backgrounds/forest/", "res://assets/level backgrounds/beach_/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game/game.tscn")
-current_scene="res://game/game.tscn"
+open_scenes=PackedStringArray("res://ui/main_menu.tscn")
+current_scene="res://ui/main_menu.tscn"
 center_split_offset=-345
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,8 +43,8 @@ position=Vector2i(1080, 23)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://ui/main_menu.gd"]
+selected_script="res://ui/main_menu.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
